--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,15 +1,18 @@
 .app {
+  // border: 2px solid white;
   font-family: 'Urbanist', sans-serif;
   margin: auto;
   max-width: 1000px;
+  min-height: 200px;
   text-align: center;
 
   .content {
     color: white;
+    height: 100%;
     margin: auto;
-    min-height: 100vh;
     max-width: 950px;
+    padding-top: 20px;
     position: relative;
-    top: 50px;
+    top: -20px;
   }
 }
